hphp/hack/test/typecheck/async_override_bad.php.exp
File "async_override_bad.php", line 17, characters 19-21:
The method `foo` is not compatible with the overridden method (Typing[4341])
  File "async_override_bad.php", line 17, characters 19-21:
  You cannot override this method with a non-async method
  File "async_override_bad.php", line 5, characters 25-27:
  It was declared as async
